--- a/vars/RedHat-vars.yml
+++ b/vars/RedHat-vars.yml
@@ -1,2 +1,6 @@
 ---
-puppet_release_rpm: "https://yum.puppetlabs.com/puppet{{ puppet_version }}-release-el-{{ ansible_distribution_major_version }}.noarch.rpm"
+puppet_release_map:
+  puppet: "https://yum.puppetlabs.com/puppet{{ puppet_version }}-release-el-{{ ansible_distribution_major_version }}.noarch.rpm"
+  openvox: "https://yum.voxpupili.org/openvox{{ puppet_version }}-release-el-{{ ansible_distribution_major_version }}.noarch.rpm"
+
+puppet_release_rpm: "{{ puppet_release_map[puppet_variant] }}"
