--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,8 @@
 ---
-puppet_agent_package: "puppet-agent"
+puppet_package_map:
+  puppet: "puppet-agent"
+  openvox: "openvox-agent"
+
+puppet_agent_package: "{{ puppet_package_map[puppet_variant] }}"
+
 puppet_agent_service: "puppet"
