set defaults for puppet_variant to openvox and puppet_version to 8

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-puppet_variant: "puppet"
-puppet_version: "7"
+puppet_variant: "openvox"
+puppet_version: "8"
 puppet_agent_server_fqdn: ""
 
 puppet_agent_service_state: "started"
