added logic to deal with voxpupili package naming (ubuntu 22.04 should become ubuntu22.04 in the url, for example.)

--- a/vars/Debian-vars.yml
+++ b/vars/Debian-vars.yml
@@ -1,5 +1,8 @@
----
-distro_id: "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}"
+version_fact_map:
+  Debian: "{{ ansible_distribution_major_version }}"
+  Ubuntu: "{{ ansible_distribution_version }}"
+
+distro_id: "{{ ansible_distribution | lower }}{{ version_fact_map[ansible_distribution] }}"
 
 puppet_release_map:
   puppet: "https://apt.puppetlabs.com/puppet{{ puppet_version }}-release-{{ ansible_distribution_release }}.deb"
