--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,4 +15,5 @@ platforms:
 provisioner:
   name: ansible
   playbooks:
+    prepare: ${MOLECULE_PREPARE_PLAYBOOK:-prepare.yml}
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
